# Reversy

./: AIPlayer.cpp  BasicGameRules.cpp  Board.cpp  Board.h  BoardDisplayer.h  CMakeCache.txt  CMakeLists.txt  Client.cpp  Client.h  Client.txt  ConsoleDisplay.cpp  ConsoleDisplay.h  GamePlay.cpp  GamePlay.h  GameRules.cpp  GameRules.h  HumanConsolePlayer.cpp  HumanConsolePlayer.h  Makefile  Player.cpp  Player.h  Point.cpp  RemotePlayer.cpp  RemotePlayer.h  VirtualPlayer.cpp  VirtualPlayer.h  client_main.cpp  cmake_install.cmake  main.cpp  reading.cpp
etc/: CMakeLists.txt  log.txt
exe/: Client.txt  client_exe  server_exe
java for ex6/: BasicGameRules.java  Board.java  BoardDisplayer.java  BoardGameController.java  ConsoleDisplay.java  GamePlay.java  GameRules.java  HumanConsolePlayer.java  HumanGUIPlayer.java  Player.java  Point.java  fileReading.java  settings.txt
java for ex6/etc/: compile.txt  decisions.txt  names.txt  sources.txt
java for ex6/src/game/: BasicGameRules.java  Board.java  BoardDisplayer.java  ConsoleDisplay.java  GamePlay.java  GameRules.java  HumanConsolePlayer.java  HumanGUIPlayer.java  Player.java  Point.java
java for ex6/src/sample/: BoardController.java  BoardGame.fxml  BoardGameController.java  GameController.java  GameSample.fxml  Main.java  MenuController.java  SettingsController.java  SettingsSample.fxml  StyleSheet.css
src/: CMakeLists.txt
src/client/: AIPlayer.h  BasicGameRules.h  BoardDisplayer.h  Client.cpp  Client.txt  GamePlay.cpp  GamePlay.h  GameRules.cpp  GameRules.h  HumanConsolePlayer.cpp  Menu.cpp  Menu.h  Player.cpp  Player.h  Point.h  RemotePlayer.cpp  RemotePlayer.h  VirtualPlayer.cpp  VirtualPlayer.h  main.cpp
src/server/: CloseCommand.cpp  CloseCommand.h  Command.h  CommandsManager.cpp  CommandsManager.h  JoinGameCommand.cpp  JoinGameCommand.h  ListGamesCommand.cpp  ListGamesCommand.h  PlayCommand.cpp  PlayCommand.h  Server.cpp  Server.h  StartCommand.cpp  StartCommand.h  Task.h  ThreadPool.cpp  ThreadPool.h  gameLoopTask.cpp  gameLoopTask.h  server_main.cpp
src/test/: BoardTest.cpp  PointTest.cpp  gtest_main.cpp  makefile
test/: BasicGameRulesTest.cpp  GamePlayTest.cpp  JustATest.cpp
